add javascript in todo list

--- a/todolist/index.html
+++ b/todolist/index.html
@@ -13,13 +13,13 @@
     <div class="todo-app">
       <h2>To-Do List <img src="images/icon.png" alt="icon_image"></h2>
       <div class="row">
-        <input type="text" placeholder="Enter your text">
-        <button>Add</button>
+        <input type="text" id="input-box" placeholder="Enter your text">
+        <button onclick="addTask()">Add</button>
       </div>
       <ul id="item-container">
-        <li class="checked">task 1</li>
+        <!-- <li class="checked">task 1</li>
         <li>task 1</li>
-        <li>task 1</li>
+        <li>task 1</li> -->
       </ul>
     </div>
   </div>
