final version of converter

--- a/currency_converter/index.html
+++ b/currency_converter/index.html
@@ -36,7 +36,7 @@
         <p>To</p>
         <div class="select-container">
           <img src=" https://flagsapi.com/IN/flat/64.png">
-          <select name="from">
+          <select name="to">
             <option value="USD">USD</option>
             <option value="INR" selected>INR</option>
             <option value="EUR">EUR</option>
